<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Know Your Preparation</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_selection">Selection</string>
    <string name="button1">Start</string>
    <string name="button21">C Apps</string>
    <string name="button22">Probability</string>
    <string name="edit_message">Enter Your Name</string>
    <string name="title_activity_capps">Capps</string>
    <string name="cancel">Cancel</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="title_activity_frag">Frag</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_res">Res</string>
    <string name="res">Your Score is : </string>
    <string name="home">Home</string>
    <string name="title_activity_test">Test</string>
    <string name="sol"> View Solution</string>
    <string name="time">00:00</string>
    <string name="test">Take 20 mins test</string>
    <string name="POT">Problems On Trains</string>
    <string name="TAW">Time And Work</string>
    <string name="About">About</string>
    <string name="CancelT">Cancel the Test</string>

</resources>
