<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|left|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/final_img"
    tools:context=".SelectionActivity" >

    <TextView
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:textAppearance="?android:attr/textAppearanceLarge" >

        <requestFocus />
    </TextView>

    <Button
        android:id="@+id/button21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickedCApps"
        android:text="@string/button21" />

    <Button
        android:id="@+id/button22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickedProbabilty"
        android:text="@string/button22" />

    <Button
        android:id="@+id/button23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/POT" 
        android:onClick="clickedProblemsOnTrain"/>

    <Button
        android:id="@+id/button24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TAW"
        android:onClick="clickedTimeandWork" />

    <Button
        android:id="@+id/button25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Test"
        android:text="@string/test" />

</LinearLayout>